syntax = "proto3";

package hrm.core;
import "node_modules/@qlean/nestjs-typeorm-persistence-search/proto/common-search.proto";

service ProductService {
    rpc Create (ProductCreateRequest) returns (ProductResponse) {}
    rpc Update (ProductUpdateRequest) returns (ProductResponse) {}
    rpc Search (ProductSearchRequest) returns (ProductSearchResponse) {}
    rpc FindById (qlean.common.search.UuidRequest) returns (ProductResponse) {}
    rpc Remove (qlean.common.search.UuidRequest) returns (ProductResponse) {}
    rpc Restore (qlean.common.search.UuidRequest) returns (ProductResponse) {}
}

message ProductCreateRequest {
    string title = 1;
    string name = 2;
}

message ProductUpdateRequest {
    string id = 1;
    string title = 2;
    string name = 3;
}

message ProductResponse {
    Product data = 1;
}

message ProductSearchRequest {
    int32 page = 1;
    int32 limit = 2;
    /* ******************
     * Элементы массива задают последовательность сортировки
     * ****************** */
    repeated qlean.common.search.SortField sort = 3;
    /* ******************
     * Элементы массива применяются как OR
     * ****************** */
    repeated WhereFields where = 4;

    /* ******************
     * Поля для критериев фильтрации
     * Свойства применяются как AND
     * ****************** */
    message WhereFields {
        qlean.common.search.UuidCondition id = 1;
        qlean.common.search.StringCondition title = 2;
        qlean.common.search.StringCondition name = 3;
        bool isDeleted = 4;
        qlean.common.search.DateCondition createdAt = 5;
        qlean.common.search.DateCondition updatedAt = 6;
        qlean.common.search.DateCondition deletedAt = 7;
    }
}

message ProductSearchResponse {
    repeated Product data = 1;
    int32 page = 2;
    int32 pageCount = 3;
    int32 limit = 4;
    int32 count = 5;
    int32 total = 6;
}

message Product {
    string id = 1;
    string title = 2;
    string name = 3;
    string createdAt = 4;
    string updatedAt = 5;
    bool isDeleted = 6;
    string deletedAt = 7;
}

message ProductRelation {
    string id = 1;
    string title = 2;
    string name = 3;
}
